# LadderNetwork

./: .dockerignore  .gitignore  CMakeLists.txt  ContinuedFraction.cpp  Dockerfile  NetworkUtils.cpp  NetworkUtils.hpp  Polynomial.cpp  Procfile  README.md  docker-compose.yml  gunicorn.conf.py  main.cpp  network.py  reorganize.py  requirements.txt  test_cases.py  wsgi.py
api/: index.py
docs/: PROJECT_STRUCTURE.md  deploy_heroku.md  deploy_vercel.md
scripts/: smoke_tests.py
src/: CSVMaker.cpp  CSVMaker.hpp  ContinuedFraction.cpp  ContinuedFraction.hpp  NetworkUtils.cpp  NetworkUtils.hpp  Polynomial.cpp  Polynomial.hpp  main.cpp
templates/: index.html
tests/: test_network.cpp
web/: app.py  index.html  network.py  start_webapp.py
